<resources>
    <string name="app_name">UngDungBanHang</string>
    <string name="title_activity_thong_tin">ThongTinActivity</string>
    <string name="googleApi">AIzaSyAeH7w4rElm7ITsbPJ5joxc34VR0vfEUuY</string>
    <string name="action_search">search</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_dienthoai">Điện thoại</string>
    <string name="nav_dangxuat">Đăng xuất</string>

    <string name="nav_diachi">Địa chỉ</string>
    <string name="nav_taikhoan">Tài khoản</string>
    <string name="nav_thongtin">Thông tin</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

</resources>